<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="7dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/card_rounded"
    android:elevation="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/trip_name"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/munich_olympiaturm"
        android:elevation="7dp"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/md_white_1000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <Button
            android:id="@+id/btn_delete_trip"
            android:text="@string/delete_trip"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_complete_trip"
            android:text="@string/complete_trip"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_rounded"
        android:backgroundTint="@color/md_grey_200"/>


    <ImageView
        android:id="@+id/img_trip_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_check_circle_24"/>

    <LinearLayout
        android:id="@+id/trip_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/place"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center" />
        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/card_rounded"
        android:backgroundTint="@color/md_grey_200"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_mark_stop_ready"
            android:text="@string/mark_as_ready"
            android:background="@drawable/card_rounded_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>